fix: aligning header items with flexbox

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,23 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* Solution */
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+ul.links {
+  display: flex;
+  gap: 8px;
+}
+
